# letmecook

./: .env.template  .gitignore  Cargo.toml  Rocket.toml.template  log4rs.yaml  testrecipe.json
.sqlx/: query-1279634e0be60b8013b09d6aeb10e44c291e374a3910da461047e0af3aa7561c.json  query-3e41e1b8ab3d50f6258100ec082116c195d0d7eadccbf6443e4a2472da772633.json  query-557ed9c94988269a8ff99133a518e8f80eb80689a23b5091a0c5528d967f4cb7.json  query-631dab66c8a592379b070cfc040c8a7668593f401a2f58fedb8d397d9ca8c347.json  query-66ad6fc391fbf8b705892fe2ea57dca63c130596486ba36963f3a0896ba3b5ec.json  query-7fb92a26b2de2d2928b0c17f2b4b6ce7c4e1cc219c41f810e9bce8e8e189ed0e.json  query-838082c66c83b9240b59a2e7d8c64ad336bfaaff776a56d6a66edfe38bbe857c.json  query-e0f6427db2c0b24be37632549713986b9c5e41d2b8baee9a1e8c2ee638f9a724.json
migrations/: 20250322211013_users.sql  20250323162654_remove_user_salt.sql  20250325203425_recipes.sql  20250402160558_recipe_description.sql  20250402161346_recipe_not_null.sql  20250402190740_recipe_description_not_null.sql  20250405212104_recipe_image.down.sql  20250405212104_recipe_image.up.sql  20251031160624_reset_recipes.sql  20251031162845_add_recipes.sql  20251031171900_add_prep_time_recipes.sql  20251101092417_recipe_columns_not_null.sql  20251101101513_recipe_edit_fields.sql
src/: main.rs  recipe.rs  user.rs  utils.rs
src/recipe/: api.rs  mod.rs
src/user/: auth.rs  mod.rs
