[package]
name = "lmc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
rand = "0.9.0"
rocket = "0.5.1"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
sealed_trait = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "macros"] }
