[package]
name = "lmc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
log = "0.4.26"
log4rs = "1.3.0"
password-auth = "1.0.0"
rand = "0.9.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
sealed_trait = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.7.4", features = ["postgres", "macros", "runtime-tokio", "time"] } # DO NOT UPDATE
thiserror = "2.0.12"
