[package]
name = "lmc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
chrono = "0.4.40"
ctrlc = "3.5.1"
jsonwebtoken = "9.3.1"
log = "0.4.26"
log4rs = "1.3.0"
password-auth = "1.0.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.7.4", features = ["postgres", "macros", "runtime-tokio", "time"] } # DO NOT UPDATE
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
